# web-server

./: .gitignore  CLAUDE.md  README.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.github/workflows/: android-ci.yml  ci.yml  cli-publish.yml  extension-ci.yml  tauri-app-ci.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/gradle/: libs.versions.toml
android/io-core/: build.gradle.kts  proguard-rules.pro
android/quickjs-engine/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
apps/update-server/: package.json  tsconfig.json
desktop/: Cargo.toml
desktop/common/: Cargo.toml
desktop/host/: Cargo.toml
desktop/host/src/: main.rs
desktop/host/tests/: native_messaging.rs
desktop/scripts/: set-tauri-version.sh
desktop/tauri-app/: CHANGELOG.md  index.html  package.json  vite.config.ts
desktop/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
desktop/tauri-app/src-tauri/capabilities/: default.json
desktop/tauri-app/src-tauri/icons/: icon.icns
desktop/tauri-app/src-tauri/nsis/: hooks.nsh
desktop/tauri-app/src-tauri/src/: fs_commands.rs  headless_updater.rs  lib.rs  main.rs  native_host.rs  tcp.rs
docs/: TODO.md  plan-tauri-e2e.md  plan-udp-upnp.md  vision.md
docs/research/: cli-servers-comparison.md  competitive-landscape.md  feature-comparison.md  feature-roadmap-ideas.md  (+1 more)
extension/: package.json  tsconfig.json  vite.config.ts
manifests/: app.ok200.native.json.template
scripts/: package-extension.sh  release-desktop.sh  release-extension.sh
(+69 files in other folders)
