[package]
name = "ok200-desktop"
version.workspace = true
description = "200 OK Web Server Desktop App"
authors = ["Kyle Graehl <kgraehl@gmail.com>"]
edition = "2021"

[lib]
name = "ok200_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
ok200-common = { path = "../../common" }
tokio = { version = "1", features = ["net", "rt", "sync", "io-util", "macros", "fs"] }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }
uuid = { workspace = true }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
tauri-plugin-window-state = "2"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[lints]
workspace = true
